# WeatherCLI

./: .gitignore  LICENSE.md  README.md  SAMPLECOMMANDS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
src/: main.py
src/helpers/: location_service.py  weather_codes.py  weather_service.py
src/weathercli/: main.py
src/weathercli/helpers/: location_service.py  output.py  parse_flags.py  sparklines.py  updater_routine.py  weather_codes.py  weather_service.py
tests/: test_location_service.py  test_weather_code.py  test_weather_service.py
