[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weathercli"
authors = [{name = "Chenchu Hemanth Yakasiri Saravanan"}]
license = {text = "MIT"}
version = "1.0.3"
description = "Simple terminal weather CLI"
keywords = ["weather", "cli", "terminal"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests","geopy","rich"]

[project.urls]
Homepage = "https://github.com/ChenchuH/WeatherCLI"

[project.scripts]
weathercli = "weathercli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]